[gd_scene load_steps=2 format=3 uid="uid://ds70at1agjq4h"]

[ext_resource type="Script" path="res://Scripts/spawns.gd" id="1_4c5qg"]

[node name="powerUpSpawner" type="Node2D"]

[node name="powerUpSpawnPoints" type="Node2D" parent="."]
position = Vector2(-1, 22)
script = ExtResource("1_4c5qg")

[node name="ammoSpawn" type="Marker2D" parent="powerUpSpawnPoints"]
position = Vector2(-91, 1)

[node name="ammoTimer" type="Timer" parent="powerUpSpawnPoints/ammoSpawn"]
wait_time = 20.0
one_shot = true

[node name="bulletSpeedSpawn" type="Marker2D" parent="powerUpSpawnPoints"]
position = Vector2(-43, 0)

[node name="bulletSpeedTimer" type="Timer" parent="powerUpSpawnPoints/bulletSpeedSpawn"]
wait_time = 20.0
one_shot = true

[node name="healthSpawn" type="Marker2D" parent="powerUpSpawnPoints"]

[node name="healthTimer" type="Timer" parent="powerUpSpawnPoints/healthSpawn"]
wait_time = 20.0
one_shot = true

[node name="increaseFireRateSpawn" type="Marker2D" parent="powerUpSpawnPoints"]
position = Vector2(40, 0)

[node name="increaseFireRateTimer" type="Timer" parent="powerUpSpawnPoints/increaseFireRateSpawn"]
wait_time = 20.0
one_shot = true

[node name="addDamageSpawn" type="Marker2D" parent="powerUpSpawnPoints"]
position = Vector2(86, 1)

[node name="addDamageTimer" type="Timer" parent="powerUpSpawnPoints/addDamageSpawn"]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="powerUpSpawnPoints/ammoSpawn/ammoTimer" to="powerUpSpawnPoints" method="_on_ammo_timer_timeout"]
[connection signal="timeout" from="powerUpSpawnPoints/bulletSpeedSpawn/bulletSpeedTimer" to="powerUpSpawnPoints" method="_on_bullet_speed_timer_timeout"]
[connection signal="timeout" from="powerUpSpawnPoints/healthSpawn/healthTimer" to="powerUpSpawnPoints" method="_on_health_timer_timeout"]
[connection signal="timeout" from="powerUpSpawnPoints/increaseFireRateSpawn/increaseFireRateTimer" to="powerUpSpawnPoints" method="_on_increase_fire_rate_timer_timeout"]
[connection signal="timeout" from="powerUpSpawnPoints/addDamageSpawn/addDamageTimer" to="powerUpSpawnPoints" method="_on_add_damage_timer_timeout"]
